--- a/packages/contracts/foundry.toml
+++ b/packages/contracts/foundry.toml
@@ -3,6 +3,7 @@ src = "src"
 out = "out"
 libs = ["lib"]
 solc = "0.8.20"
+evm_version = "paris"
 optimizer = true
 optimizer_runs = 200
 via_ir = false
