--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -27,6 +27,9 @@
     "build": "tsc",
     "lint": "eslint src/"
   },
+  "dependencies": {
+    "viem": "^2.0.0"
+  },
   "devDependencies": {
     "typescript": "^5.3.0"
   }
