fix: add public images folder to git for server deployment
- Update .gitignore to track apps/web/public/ folder
- Add token icons (usdt-bep20, dsc-logo) in PNG and SVG formats
- Fixes missing icons and layout issues on production server

--- a/.gitignore
+++ b/.gitignore
@@ -14,10 +14,14 @@ node_modules/
 apps/web/*.mjs
 packages/contracts/*.mjs
 
-# public build artifacts
-apps/web/public/
+# build artifacts
 dist/
 .next/
+
+# Allow public folder but ignore generated files
+!apps/web/public/
+apps/web/public/*.js
+apps/web/public/*.map
 
 # relayer private infra
 apps/relayer/.env
